meecast (0.9.4) unstable; urgency=low

  * Fixed problem with current night forecsat

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 15 Jun 2014 06:31:23 +0200

meecast (0.9.3) unstable; urgency=low

  * Added United Kingdom to foreca.com source
  * Added Germany's stations to openweathermap.org source
  * Fixed "N/A" wind direction
  * Fixed problem with today data for weather.com source
  * Fixed problem with n/a icon for Atmos iconset
  * Added Danish translation
  * Updated Catalan, Chinese (Taiwan), Czech, Finnish, 
    German, Italian, Norwegian, Serbian, Slovenian,
    Spanish, Russian, Hungarian, French translations

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 15 Jun 2014 06:31:23 +0200

meecast (0.9) unstable; urgency=low

  * Fixed problem with Units page 
  * Added stations to Finland in source yr.no
  * Fixed problem with converting map URLs
  * Added icon for openstreetmap.org

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 16 Apr 2014 22:31:23 +0200

meecast (0.8.18) unstable; urgency=low

  * Fixed problem with current weather in foreca.com source 
  * Updated Catalan, Serbian, Slovenian, Spanish, Russian translations

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 16 Apr 2014 22:31:23 +0200

meecast (0.8.17) unstable; urgency=low

  * Fixed problem with current weather in foreca.com source 
  * Updated Catalan, Czech, Finnish, Slovenian, Spanish,
    German, Italian, Arabic translations


 -- Vlad Vasiliev <vlad@gas.by>  Fri, 11 Apr 2014 12:31:23 +0200

meecast (0.8.16) unstable; urgency=low

  * Updated German and Russian translations 
  * Updated Denmark for openstreetmap.org 
  * Fixed problem with crashing application with foreca.com data
  * Updated Catalan, Czech, Finnish, Norwegian, Serbian, Slovenian, Spanish,
    Turkish, German translations

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 30 Mar 2014 12:31:23 +0200

meecast (0.8.15) unstable; urgency=low

  * Nothing 

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 18 Feb 2014 12:31:23 +0200

meecast (0.8.14) unstable; urgency=low
