@@ -169,7 +169,7 @@ namespace Core {
         if (!_self)
             _self = new DataParser();
         _refcount++;
-        /*  std::cerr<<"Refcount for DataParser: "<<_refcount<<std::endl; */
+        /* std::cerr<<"DataParser::Instance() Refcount for DataParser: "<<_refcount<<std::endl; */
         return _self;
     }
 
@@ -191,17 +191,18 @@ namespace Core {
         }
         if (_refcount == 0)
             _refcount++;
-        /* std::cerr<<"Refcount for DataParser2: "<<_refcount<<std::endl; */
+        /* std::cerr<<"DataParser::Instance(...) Refcount for DataParser: "<<_refcount<<std::endl; */
         return _self;
     }
 ////////////////////////////////////////////////////////////////////////////////
     void
     DataParser::DeleteInstance(){
-       std::cerr<<"Delete Refcount for DataParser: "<<_refcount<<std::endl;  
+       /* std::cerr<<"Delete Refcount for DataParser: "<<_refcount<<std::endl; */
        if (_refcount == 0)
             return;
        _refcount--;
        if (_refcount == 0){
+           /* std::cerr<<"Real delete Refcount for DataParser: "<<_refcount<<std::endl; */
             delete _self;
             _self = NULL;
        }
@@ -209,6 +210,7 @@ namespace Core {
 ////////////////////////////////////////////////////////////////////////////////
     DataParser::~DataParser(){
        Data* forecast_data;
+       /* std::cerr<<"DataParser::~DataParser()"<<std::endl; */
        while (!_list->empty()){
          forecast_data = _list->back();
          delete forecast_data;
