@@ -1,6 +1,7 @@
 meecast (0.9.4) unstable; urgency=low
 
   * Fixed problem with current night forecsat
+  * Fixed memory leaks
 
  -- Vlad Vasiliev <vlad@gas.by>  Sun, 15 Jun 2014 06:31:23 +0200
 
